# chat-with-pg

./: .gitignore  README.md  pyproject.toml
chatwithpg/: chat_with_pg.py  populate_db.py  utils.py  viz.py
