[tool.poetry]
name = "chatwithpg"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <federico@federicolanzani.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^5.0.1"
langchain = "^0.3.3"
chromadb = "^0.5.13"
langchain-community = "^0.3.2"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.2"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
